# GraphicsAlgorithms

./: CMakeLists.txt
include/: config.h  renderer.h  windowHandler.h
include/algorithms/: bezier.h  cubic.h  hermite.h
include/math/: array.h  badMath.h  vec2.h
lib/GLAD/include/glad/: glad.h
lib/GLAD/src/: glad.c
src/: main.cpp  renderer.cpp  windowHandler.cpp
